EJBCAINTER-71: Default EJBCA/CESeCore PKCS#11 attributes makes HSMs vulnerable to key extraction
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@22384 37aeb1de-b14b-0410-9a0e-82b28170d228